# voiceflow-speech-system

./: CHANGELOG.md  README.md
backend/: .env.example  README.md  main.py  main_backup.py  pyproject.toml
backend/app/api/: stt_ws.py  tts_http.py  unified_ws.py  vad_ws.py
backend/app/config/: constants.py  settings.py
backend/app/services/: dispatcher.py
backend/app/services/stt/: base.py
backend/app/services/stt/providers/: vosk_service.py  whisper_service.py
backend/app/services/tts/: base.py
backend/app/services/tts/providers/: piper_service.py
backend/app/services/vad/: base.py
backend/app/services/vad/providers/: silero_service.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/app/bot/voice/: layout.tsx  loading.tsx  page.tsx
frontend/src/app/bot/voice/_components/: VoiceBotChatActionBar.tsx  VoiceChatBot.tsx
frontend/src/app/unified/: layout.tsx  page.tsx
frontend/src/app/updated/: page.tsx
frontend/src/app/vad/: page.tsx
frontend/src/app/voice/: layout.tsx  page.tsx
frontend/src/components/: BotLoadingScreen.tsx  ChatBotTitleBar.tsx  ChatWindow.tsx  MessageBubble.tsx
frontend/src/components/theme/: AppThemeProvider.tsx  ThemeToggler.tsx
frontend/src/lib/: apiClient.ts
frontend/src/types/: chat-message.ts
frontend/src/utils/: chatUtils.ts  dateUtils.ts  urlUtils.ts
